src/test/resources/wacc_examples/invalid/semanticErr/imports/nestedImportFunctionAlreadyDeclared.wacc
begin
    include "importFiles/fileThatImportsFoo.wacc"
	int foo() is
		return 0
	end
	skip
end